===============================================================================
Version 3.1.10
===============================================================================
New Features:
    
Bug Fixes:
  - Fixed a bug in the WeldJoint class when using to fixed angular velocity
    bodies.
  - Fixed a NPE bug in the World.detect methods.
    
Deprecated:

Breaking Changes:
    
Other:

===============================================================================
Version 3.1.9
===============================================================================
New Features:
  - Added a new interface, Triangulator, that both the EarClipping and
    SweepLine algorithms implement that allows you to get a triangulation of
    a simple polygon.
  - Added a bunch of new detect methods to the World class to allow filtering
    of sensor bodies, inactive bodies, or by a Filter object and some other
    features.
  - Added a new DetectListener interface specifically for the World.detect
    methods that allow arbitrary filtering of collision tests.
  - Added new raycast and convexCast methods that include a Filter and
    ignoreInactive parameters.
    
Bug Fixes:
  - Fixed a bug in the SweepLine class where it would get a NPE when there
    were vertices who had close to the same y value (were sorted incorrectly).
  - Fixed a bug in the EarClipping class where extra half edges were added
    to the DCEL at termination that didn't need to be.
  - Fixed a bug in the Interval.intersection(Interval) class where it was
    performing the union rather than the intersection.
  - Fixed a bug in the SweepLine class where it would enter an infinite loop
    due to a poor sort condition during the decompose to y-monotone phase.
  - Fixed a bug in the convexCast methods where it would exit early instead
    of continuing to test other fixtures when false was returned from a
    particular ConvexCastListener method.
  - Fixed a bug in the Sandbox app where null would be output instead