@@ -1,0 +1,31 @@
+30
+9.5 6.5
+7.5 6.5
+7.5 5.5
+6.5 5.5
+6.5 4.5
+5.5 4.5
+5.5 6.5
+3.5 6.5
+3.5 7.5
+4.5 7.5
+4.5 8.5
+5.5 8.5
+5.5 6.5
+7.5 6.5
+7.5 7.5
+9.5 7.5
+9.5 9.5
+8.5 9.5
+8.5 8.5
+7.5 8.5
+7.5 9.5
+3.5 9.5
+3.5 8.5
+2.5 8.5
+2.5 7.5
+0.49999997 7.5
+0.49999997 9.5
+-0.49999997 9.5
+-0.5 -0.49999994
+9.5 -0.49999997
